--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+mysql-5.7 (5.7.16-0ubuntu0.16.04.1) xenial-security; urgency=medium
+
+  * SECURITY UPDATE: Update to 5.7.16 to fix security issues
+    - CVE-2016-5584
+    - CVE-2016-7440
+
+ -- Marc Deslauriers <marc.deslauriers@ubuntu.com>  Mon, 24 Oct 2016 08:05:46 -0400
+
 mysql-5.7 (5.7.15-0ubuntu0.16.04.1) xenial-security; urgency=medium
 
   * SECURITY UPDATE: Update to 5.7.15 to fix security issues
